<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ihm.seawatch.fragments.Map">

    <Button
        android:id="@+id/button_mapToHome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:fontFamily="casual"
        android:text="@string/previous"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/mark"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:layout_marginBottom="284dp"
        android:text="@string/mark"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/button_mapToHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="230dp"
        android:layout_height="35dp"
        android:layout_marginTop="100dp"
        android:background="@color/map_bar"
        android:fontFamily="casual"
        android:text="@string/MapCheckBox"
        android:textAlignment="textStart"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/map_spinner"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_marginTop="100dp"
        android:dropDownWidth="match_parent"
        android:entries="@array/selections"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toEndOf="@+id/checkBox"
        app:layout_constraintTop_toTopOf="parent" />

    <org.osmdroid.views.MapView
        android:id="@+id/map"
        android:layout_width="411dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button_mapToHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        app:layout_constraintVertical_bias="0.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>