<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ihm.seawatch.fragments.HomePage">

    <Switch
        android:id="@+id/gpsSwitch"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/border"
        android:checked="false"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:checked="false" />

    <TextView
        android:id="@+id/gps_textView"
        android:layout_width="240dp"
        android:layout_height="80dp"
        android:layout_marginTop="140dp"
        android:fontFamily="casual"
        android:gravity="center_vertical"
        android:text="@string/location"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gpsSwitch"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_map"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="270dp"
        android:background="@android:drawable/ic_dialog_map"
        android:backgroundTint="@color/design_default_color_on_secondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/map_textView"
        android:layout_width="240dp"
        android:layout_height="80dp"
        android:layout_marginTop="270dp"
        android:fontFamily="casual"
        android:paddingTop="20sp"
        android:text="@string/mapToggle"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_map"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_post"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="400dp"
        android:background="@android:drawable/ic_input_get"
        android:backgroundTint="@color/design_default_color_on_secondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/post_textView"
        android:layout_width="240dp"
        android:layout_height="80dp"
        android:layout_marginTop="400dp"
        android:fontFamily="casual"
        android:paddingTop="25sp"
        android:text="@string/post"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_post"
        app:layout_constraintTop_toTopOf="parent" />

    <com.facebook.share.widget.ShareButton
        android:layout_marginRight="270dp"
        android:layout_marginBottom="3dp"
        android:id="@+id/home_share"
        android:background="@color/com_facebook_blue"
        android:layout_width="wrap_content"
        android:text="Share our page"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


    <TextView
        android:id="@+id/contact_dev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="580dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="casual"
        android:paddingTop="25sp"
        android:text="@string/contact_dev"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>